--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{% include head.html %}
+  {% include head.html %}
 
-<body>
+  <body>
+    <div class="site-content">
+      {% include nav.html %}
 
-{% include nav.html %}
+      {{ content }}
 
-{{ content }}
-
-{% include footer.html %}
-
-</body>
+      {% include footer.html %}
+    </div>
+    <script src="js/jquery-1.11.1.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/app.js"></script>
+  </body>
 </html>
