Corrects phone number.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
           <h3 class="widget-title">Our address</h3>
           <strong></strong>
           <address>424 Hafez Ave, Tehran, Iran, 15875-4413.</address>
-          <a href="tel:+98 (21) 64540">+1 800 931 812</a> <br>
+          <a href="tel:+98 (21) 64540">+98 (21) 64540</a> <br>
           <a href="mailto:offic e@companyname.com">office@companyname.com</a>
         </div>
       </div>
