--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
-    <title>About : IoT Laboratory</title>
+    {% if page.title %}
+      <title>IoT Laboratory : {{page.title}}</title>
+    {% else %}
+      <title>IoT Laboratory</title>
+    {% endif %}
 
     <!-- Loading third party fonts -->
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
