--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,4 +2,14 @@
 layout: default
 ---
 
-{{ content }}
+<div class="site-content">
+  {% include nav.html %}
+
+  {{ content }}
+
+  {% include footer.html %}
+</div>
+<script src="js/jquery-1.11.1.min.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/app.js"></script>
+
