Changes primary color of website.

--- a/_sass/libs/_settings.scss
+++ b/_sass/libs/_settings.scss
@@ -4,7 +4,7 @@ $secondary-font    : "Roboto Slab", "Raleway", "Open Sans", serif;
 
 
 // Color Variables
-$accent-color      : #69acc7;
+$accent-color      : #FF7A56;
 $primary-color     : $accent-color;
 $secondary-color   : #edf2f4;
 
