Corrects sass links and structure.

--- a/_sass/layout/_content.scss
+++ b/_sass/layout/_content.scss
@@ -58,7 +58,7 @@
 		margin-top: 30px;
 		width: 22px;
 		height: 11px;
-		background: url(images/arrow-long.png);
+		background: url(../images/arrow-long.png);
 	}
 }
 
@@ -225,7 +225,7 @@ ol.circle{
 			content:" ";
 			width:21px;
 			height: 18px;
-			background: url(images/quote.png) no-repeat;
+			background: url(../images/quote.png) no-repeat;
 			display: block;
 			position: absolute;
 			top:0;
