Corrects css information.

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,7 @@
 ---
-Project_Name: Science Labs
-Author: Themezy
-Email: contact@themezy.com
-Url: http://www.themezy.com
+Project: IoT Labratory
+Author: @1995parham
+Email: parham.alvani@gmail.com
 ---
 
 /*=========================================== 
