fixes some issues

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header-bar">
       <a href="index.html" class="branding">
-        <img src="images/logo.png" alt="" class="logo">
+        <img src="images/logo.png" alt="Amirkabir University of Technology IoT Laboratory" class="logo">
         <div class="logo-type">
           <h1 class="site-title">Amirkabir University of Technology</h1>
           <small class="site-description">Computer & Information Technology Engineering Department</small>
