--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,10 +39,10 @@
           <h3 class="widget-title">Social media</h3>
           <p>Deserunt mollitia animi id est laborum dolorum fuga harum quidem rerum facilis.</p>
           <div class="social-links">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-google-plus"></i></a>
-            <a href="#"><i class="fa fa-pinterest"></i></a>
+            <!--<a href="#"><i class="fa fa-facebook"></i></a>-->
+            <!--<a href="#"><i class="fa fa-twitter"></i></a>-->
+            <!--<a href="#"><i class="fa fa-google-plus"></i></a>-->
+            <!--<a href="#"><i class="fa fa-pinterest"></i></a>-->
           </div>
         </div>
       </div>
