fixes more issues

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,11 +14,11 @@
         <div class="widget">
           <h3 class="widget-title">Press room</h3>
           <ul class="arrow-list">
-            <li><a href="#">Accusantium doloremque</a></li>
-            <li><a href="#">Laudantium totam aperiam</a></li>
-            <li><a href="#">Eaque ipsa quae illo inventore</a></li>
-            <li><a href="#">Veritatis et quasi architecto</a></li>
-            <li><a href="#">Vitae dicta sunt explicabo</a></li>
+            <!--<li><a href="#">Accusantium doloremque</a></li>-->
+            <!--<li><a href="#">Laudantium totam aperiam</a></li>-->
+            <!--<li><a href="#">Eaque ipsa quae illo inventore</a></li>-->
+            <!--<li><a href="#">Veritatis et quasi architecto</a></li>-->
+            <!--<li><a href="#">Vitae dicta sunt explicabo</a></li>-->
           </ul>
         </div>
       </div>
@@ -26,11 +26,11 @@
         <div class="widget">
           <h3 class="widget-title">Research summary</h3>
           <ul class="arrow-list">
-            <li><a href="#">Accusantium doloremque</a></li>
-            <li><a href="#">Laudantium totam aperiam</a></li>
-            <li><a href="#">Eaque ipsa quae illo inventore</a></li>
-            <li><a href="#">Veritatis et quasi architecto</a></li>
-            <li><a href="#">Vitae dicta sunt explicabo</a></li>
+            <!--<li><a href="#">Accusantium doloremque</a></li>-->
+            <!--<li><a href="#">Laudantium totam aperiam</a></li>-->
+            <!--<li><a href="#">Eaque ipsa quae illo inventore</a></li>-->
+            <!--<li><a href="#">Veritatis et quasi architecto</a></li>-->
+            <!--<li><a href="#">Vitae dicta sunt explicabo</a></li>-->
           </ul>
         </div>
       </div>
