--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,5 +5,11 @@
 
   <body>
     {{content}}
+
+    {% include footer.html %}
+
+    <script src="js/jquery-1.11.1.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
