--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,15 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
     {% if page.title %}
-      <title>IoT Laboratory : {{page.title}}</title>
+      <title>IoT Research Center: {{page.title}}</title>
     {% else %}
-      <title>IoT Laboratory</title>
+      <title>IoT Research Center</title>
     {% endif %}
 
     <!-- Loading third party fonts -->
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
     <link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
-
+    <link rel="shortcut icon" href="favicon.png">
     <!-- Loading main css file -->
     <link rel="stylesheet" href="/css/style.css">
 
