--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer class="site-footer" data-bg-color="#edf2f4">
   <div class="container">
     <div class="row">
       <div class="col-md-3">
@@ -6,19 +6,14 @@
           <h3 class="widget-title">Our address</h3>
           <strong></strong>
           <address>424 Hafez Ave, Tehran, Iran, 15875-4413.</address>
-          <a href="tel:+98 (21) 64540">+98 (21) 64540</a> <br>
-          <a href="mailto:offic e@companyname.com">office@companyname.com</a>
+          <a href="tel:+982164542723"></a>+98 21 6454 2723<br>
+          <a href="mailto:bbakshi@aut.ac.ir">bbakhshi@aut.ac.ir</a>
         </div>
       </div>
       <div class="col-md-3">
         <div class="widget">
-          <h3 class="widget-title">Press room</h3>
+          <h3 class="widget-titlGe">Press room</h3>
           <ul class="arrow-list">
-            <!--<li><a href="#">Accusantium doloremque</a></li>-->
-            <!--<li><a href="#">Laudantium totam aperiam</a></li>-->
-            <!--<li><a href="#">Eaque ipsa quae illo inventore</a></li>-->
-            <!--<li><a href="#">Veritatis et quasi architecto</a></li>-->
-            <!--<li><a href="#">Vitae dicta sunt explicabo</a></li>-->
           </ul>
         </div>
       </div>
@@ -26,20 +21,17 @@
         <div class="widget">
           <h3 class="widget-title">Research summary</h3>
           <ul class="arrow-list">
-            <!--<li><a href="#">Accusantium doloremque</a></li>-->
-            <!--<li><a href="#">Laudantium totam aperiam</a></li>-->
-            <!--<li><a href="#">Eaque ipsa quae illo inventore</a></li>-->
-            <!--<li><a href="#">Veritatis et quasi architecto</a></li>-->
-            <!--<li><a href="#">Vitae dicta sunt explicabo</a></li>-->
+            <li>IoT Platforms &amp; Middlewares</li>
+            <li>Platforms Load Testing</li>
           </ul>
         </div>
       </div>
       <div class="col-md-3">
         <div class="widget">
           <h3 class="widget-title">Social media</h3>
-          <p>Deserunt mollitia animi id est laborum dolorum fuga harum quidem rerum facilis.</p>
+          <p>Follow us on social media</p>
           <div class="social-links">
-            <!--<a href="#"><i class="fa fa-facebook"></i></a>-->
+            <a href="https://github.com/aiotrc"><i class="fa fa-github"></i></a>
             <!--<a href="#"><i class="fa fa-twitter"></i></a>-->
             <!--<a href="#"><i class="fa fa-google-plus"></i></a>-->
             <!--<a href="#"><i class="fa fa-pinterest"></i></a>-->
@@ -48,6 +40,6 @@
       </div>
     </div> <!-- .row -->
 
-    <p class="colophon">copyright 2017 Platform Working Group.</p>
+    <p class="colophon">copyright 2019 IoT Research Center.</p>
   </div> <!-- .container -->
 </footer>
